--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "url": "git://github.com/medikoo/event-emitter.git"
   },
   "dependencies": {
-    "es5-ext": "~0.10.5",
-    "d": "~0.1.1"
+    "es5-ext": "~0.10.5"
   },
   "devDependencies": {
     "tad": "~0.2.1",
